// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`golden: .mcp.json with every server enabled 1`] = `
{
  "mcpServers": {
    "atlassian-acme": {
      "type": "http",
      "url": "https://mcp.atlassian.com/v1/mcp",
    },
    "canva-acme": {
      "type": "http",
      "url": "https://mcp.canva.com/mcp",
    },
    "clickup-acme": {
      "type": "http",
      "url": "https://mcp.clickup.com/mcp",
    },
    "github-acme": {
      "headers": {
        "Authorization": "Bearer \${GITHUB_TOKEN}",
      },
      "type": "http",
      "url": "https://api.githubcopilot.com/mcp/",
    },
    "hubspot-acme": {
      "type": "http",
      "url": "https://mcp.hubspot.com",
    },
    "intercom-acme": {
      "type": "http",
      "url": "https://mcp.intercom.com/mcp",
    },
    "linear-acme": {
      "type": "http",
      "url": "https://mcp.linear.app/mcp",
    },
    "monday-acme": {
      "type": "http",
      "url": "https://mcp.monday.com/mcp",
    },
    "notion-acme": {
      "type": "http",
      "url": "https://mcp.notion.com/mcp",
    },
    "plane-acme": {
      "type": "http",
      "url": "https://mcp.plane.so/http/mcp",
    },
    "sentry-acme": {
      "type": "http",
      "url": "https://mcp.sentry.dev/mcp",
    },
    "slack-acme": {
      "args": [
        "-y",
        "slack-mcp-server@1.3.0",
        "--transport",
        "stdio",
      ],
      "command": "npx",
      "env": {
        "SLACK_MCP_ADD_MESSAGE_TOOL": "true",
        "SLACK_MCP_XOXP_TOKEN": "\${SLACK_MCP_XOXP_TOKEN}",
      },
      "type": "stdio",
    },
    "stripe-acme": {
      "type": "http",
      "url": "https://mcp.stripe.com",
    },
    "vercel-acme": {
      "type": "http",
      "url": "https://mcp.vercel.com",
    },
    "webflow-acme": {
      "type": "http",
      "url": "https://mcp.webflow.com/",
    },
  },
}
`;

exports[`golden: .mcp.json for a github-only workspace 1`] = `
{
  "mcpServers": {
    "github-personal": {
      "headers": {
        "Authorization": "Bearer \${GITHUB_TOKEN}",
      },
      "type": "http",
      "url": "https://api.githubcopilot.com/mcp/",
    },
  },
}
`;

exports[`golden: Slack server, read-only vs post-enabled: read-only 1`] = `
{
  "mcpServers": {
    "slack-acme": {
      "args": [
        "-y",
        "slack-mcp-server@1.3.0",
        "--transport",
        "stdio",
      ],
      "command": "npx",
      "env": {
        "SLACK_MCP_XOXP_TOKEN": "\${SLACK_MCP_XOXP_TOKEN}",
      },
      "type": "stdio",
    },
  },
}
`;

exports[`golden: Slack server, read-only vs post-enabled: post-enabled 1`] = `
{
  "mcpServers": {
    "slack-acme": {
      "args": [
        "-y",
        "slack-mcp-server@1.3.0",
        "--transport",
        "stdio",
      ],
      "command": "npx",
      "env": {
        "SLACK_MCP_ADD_MESSAGE_TOOL": "true",
        "SLACK_MCP_XOXP_TOKEN": "\${SLACK_MCP_XOXP_TOKEN}",
      },
      "type": "stdio",
    },
  },
}
`;

exports[`golden: Slack server on the @nrjdalal package (kept latest) 1`] = `
{
  "mcpServers": {
    "slack-acme": {
      "args": [
        "-y",
        "@nrjdalal/slack-mcp-server@latest",
      ],
      "command": "npx",
      "env": {
        "SLACK_MCP_XOXP_TOKEN": "\${SLACK_MCP_XOXP_TOKEN}",
      },
      "type": "stdio",
    },
  },
}
`;

exports[`golden: @nrjdalal Slack fork read-only sets SLACK_MCP_ALLOW_WRITE=false 1`] = `
{
  "mcpServers": {
    "slack-acme": {
      "args": [
        "-y",
        "@nrjdalal/slack-mcp-server@latest",
      ],
      "command": "npx",
      "env": {
        "SLACK_MCP_ALLOW_WRITE": "false",
        "SLACK_MCP_XOXP_TOKEN": "\${SLACK_MCP_XOXP_TOKEN}",
      },
      "type": "stdio",
    },
  },
}
`;

exports[`golden: an http server with a custom url override 1`] = `
{
  "mcpServers": {
    "linear-acme": {
      "type": "http",
      "url": "https://linear.internal/mcp",
    },
  },
}
`;

exports[`golden: .mcp.json for a workspace with no servers 1`] = `
{
  "mcpServers": {},
}
`;

exports[`golden: chpwd hook for two workspaces 1`] = `
"# Managed by inscope. Do not edit by hand.
# Source of truth: ~/.config/inscope/inscope.json
# Edit there, then run \`inscope apply\` to regenerate this file.
#
# One chpwd hook resolves per-workspace secrets from $PWD on every cd: it maps
# the current directory to a workspace, then pulls that workspace's GitHub token
# from the gh keyring and Slack token from the macOS keychain. Nothing sensitive
# is written to disk, and there is no shared mutable state for sessions to race.
__inscope_resolve_identity() {
  local ws
  case "\${PWD}/" in
    "$HOME/personal/"*) ws="personal" ;;
    "$HOME/acme/"*) ws="acme" ;;
    *) ws="" ;;
  esac
  [[ "$ws" == "$__inscope_ws" ]] && return            # workspace unchanged, skip the lookups
  __inscope_ws="$ws"
  unset GITHUB_TOKEN GH_TOKEN SLACK_MCP_XOXP_TOKEN   # clear previous (and any inherited) tokens

  local gh_user="" slack_svc=""
  case "$ws" in
    acme) gh_user="neeraj-acme-org"; slack_svc="SLACK_MCP_XOXP_TOKEN_ACME" ;;
    personal) gh_user="nrjdalal" ;;
    *) return ;;                                     # outside a mapped workspace: nothing set
  esac

  local tok
  if [[ -n "$gh_user" ]]; then
    if tok="$(gh auth token -u "$gh_user" 2>/dev/null)" && [[ -n "$tok" ]]; then
      export GITHUB_TOKEN="$tok" GH_TOKEN="$tok"
    else
      print -u2 "inscope: no gh token for $gh_user; GITHUB_TOKEN/GH_TOKEN unset"
    fi
  fi
  if [[ -n "$slack_svc" ]]; then
    if tok="$(security find-generic-password -a "$USER" -s "$slack_svc" -w 2>/dev/null)" && [[ -n "$tok" ]]; then
      export SLACK_MCP_XOXP_TOKEN="$tok"
    else
      print -u2 "inscope: $slack_svc not in keychain; SLACK_MCP_XOXP_TOKEN unset"
    fi
  fi
}

autoload -Uz add-zsh-hook
add-zsh-hook chpwd __inscope_resolve_identity
__inscope_ws="__init__"          # force the first resolve, clearing any inherited token
__inscope_resolve_identity
"
`;

exports[`golden: chpwd hook with no workspaces 1`] = `
"# Managed by inscope. Do not edit by hand.
# Source of truth: ~/.config/inscope/inscope.json
# Edit there, then run \`inscope apply\` to regenerate this file.
#
# One chpwd hook resolves per-workspace secrets from $PWD on every cd: it maps
# the current directory to a workspace, then pulls that workspace's GitHub token
# from the gh keyring and Slack token from the macOS keychain. Nothing sensitive
# is written to disk, and there is no shared mutable state for sessions to race.
__inscope_resolve_identity() {
  local ws
  case "\${PWD}/" in
    # no workspaces configured
    *) ws="" ;;
  esac
  [[ "$ws" == "$__inscope_ws" ]] && return            # workspace unchanged, skip the lookups
  __inscope_ws="$ws"
  unset GITHUB_TOKEN GH_TOKEN SLACK_MCP_XOXP_TOKEN   # clear previous (and any inherited) tokens

  local gh_user="" slack_svc=""
  case "$ws" in
    # no workspaces configured
    *) return ;;                                     # outside a mapped workspace: nothing set
  esac

  local tok
  if [[ -n "$gh_user" ]]; then
    if tok="$(gh auth token -u "$gh_user" 2>/dev/null)" && [[ -n "$tok" ]]; then
      export GITHUB_TOKEN="$tok" GH_TOKEN="$tok"
    else
      print -u2 "inscope: no gh token for $gh_user; GITHUB_TOKEN/GH_TOKEN unset"
    fi
  fi
  if [[ -n "$slack_svc" ]]; then
    if tok="$(security find-generic-password -a "$USER" -s "$slack_svc" -w 2>/dev/null)" && [[ -n "$tok" ]]; then
      export SLACK_MCP_XOXP_TOKEN="$tok"
    else
      print -u2 "inscope: $slack_svc not in keychain; SLACK_MCP_XOXP_TOKEN unset"
    fi
  fi
}

autoload -Uz add-zsh-hook
add-zsh-hook chpwd __inscope_resolve_identity
__inscope_ws="__init__"          # force the first resolve, clearing any inherited token
__inscope_resolve_identity
"
`;

exports[`golden: chpwd hook arm for a workspace with neither gh nor slack 1`] = `
"# Managed by inscope. Do not edit by hand.
# Source of truth: ~/.config/inscope/inscope.json
# Edit there, then run \`inscope apply\` to regenerate this file.
#
# One chpwd hook resolves per-workspace secrets from $PWD on every cd: it maps
# the current directory to a workspace, then pulls that workspace's GitHub token
# from the gh keyring and Slack token from the macOS keychain. Nothing sensitive
# is written to disk, and there is no shared mutable state for sessions to race.
__inscope_resolve_identity() {
  local ws
  case "\${PWD}/" in
    "$HOME/docs/"*) ws="docs" ;;
    *) ws="" ;;
  esac
  [[ "$ws" == "$__inscope_ws" ]] && return            # workspace unchanged, skip the lookups
  __inscope_ws="$ws"
  unset GITHUB_TOKEN GH_TOKEN SLACK_MCP_XOXP_TOKEN   # clear previous (and any inherited) tokens

  local gh_user="" slack_svc=""
  case "$ws" in
    docs) : ;;
    *) return ;;                                     # outside a mapped workspace: nothing set
  esac

  local tok
  if [[ -n "$gh_user" ]]; then
    if tok="$(gh auth token -u "$gh_user" 2>/dev/null)" && [[ -n "$tok" ]]; then
      export GITHUB_TOKEN="$tok" GH_TOKEN="$tok"
    else
      print -u2 "inscope: no gh token for $gh_user; GITHUB_TOKEN/GH_TOKEN unset"
    fi
  fi
  if [[ -n "$slack_svc" ]]; then
    if tok="$(security find-generic-password -a "$USER" -s "$slack_svc" -w 2>/dev/null)" && [[ -n "$tok" ]]; then
      export SLACK_MCP_XOXP_TOKEN="$tok"
    else
      print -u2 "inscope: $slack_svc not in keychain; SLACK_MCP_XOXP_TOKEN unset"
    fi
  fi
}

autoload -Uz add-zsh-hook
add-zsh-hook chpwd __inscope_resolve_identity
__inscope_ws="__init__"          # force the first resolve, clearing any inherited token
__inscope_resolve_identity
"
`;

exports[`golden: chpwd hook covers tricky paths and every arm shape 1`] = `
"# Managed by inscope. Do not edit by hand.
# Source of truth: ~/.config/inscope/inscope.json
# Edit there, then run \`inscope apply\` to regenerate this file.
#
# One chpwd hook resolves per-workspace secrets from $PWD on every cd: it maps
# the current directory to a workspace, then pulls that workspace's GitHub token
# from the gh keyring and Slack token from the macOS keychain. Nothing sensitive
# is written to disk, and there is no shared mutable state for sessions to race.
__inscope_resolve_identity() {
  local ws
  case "\${PWD}/" in
    "$HOME/My Project (work)/"*) ws="my-project-work" ;;
    "$HOME/slackonly/"*) ws="slackonly" ;;
    "/opt/work/"*) ws="opt" ;;
    "$HOME/webapp/"*) ws="web.app-2_x" ;;
    "$HOME/"*) ws="home" ;;
    *) ws="" ;;
  esac
  [[ "$ws" == "$__inscope_ws" ]] && return            # workspace unchanged, skip the lookups
  __inscope_ws="$ws"
  unset GITHUB_TOKEN GH_TOKEN SLACK_MCP_XOXP_TOKEN   # clear previous (and any inherited) tokens

  local gh_user="" slack_svc=""
  case "$ws" in
    home) gh_user="acct" ;;
    my-project-work) gh_user="acme-org"; slack_svc="SLACK_MCP_XOXP_TOKEN_MYPROJECT" ;;
    opt) gh_user="acct" ;;
    slackonly) slack_svc="K" ;;
    web.app-2_x) gh_user="acct" ;;
    *) return ;;                                     # outside a mapped workspace: nothing set
  esac

  local tok
  if [[ -n "$gh_user" ]]; then
    if tok="$(gh auth token -u "$gh_user" 2>/dev/null)" && [[ -n "$tok" ]]; then
      export GITHUB_TOKEN="$tok" GH_TOKEN="$tok"
    else
      print -u2 "inscope: no gh token for $gh_user; GITHUB_TOKEN/GH_TOKEN unset"
    fi
  fi
  if [[ -n "$slack_svc" ]]; then
    if tok="$(security find-generic-password -a "$USER" -s "$slack_svc" -w 2>/dev/null)" && [[ -n "$tok" ]]; then
      export SLACK_MCP_XOXP_TOKEN="$tok"
    else
      print -u2 "inscope: $slack_svc not in keychain; SLACK_MCP_XOXP_TOKEN unset"
    fi
  fi
}

autoload -Uz add-zsh-hook
add-zsh-hook chpwd __inscope_resolve_identity
__inscope_ws="__init__"          # force the first resolve, clearing any inherited token
__inscope_resolve_identity
"
`;

exports[`golden: gitconfig includeIf block 1`] = `
"[includeIf "gitdir:~/acme/"]
	path = ~/.config/inscope/git/acme.gitconfig
[includeIf "gitdir:~/personal/"]
	path = ~/.config/inscope/git/personal.gitconfig"
`;

exports[`golden: includeIf for tricky paths, skipping a no-git workspace 1`] = `
"[includeIf "gitdir:/opt/work/"]
	path = ~/.config/inscope/git/opt.gitconfig
[includeIf "gitdir:~/"]
	path = ~/.config/inscope/git/home.gitconfig
[includeIf "gitdir:~/My Project (work)/"]
	path = ~/.config/inscope/git/spaced.gitconfig"
`;

exports[`golden: includeIf is empty when no workspace has a git identity 1`] = `""`;

exports[`golden: per-workspace gitconfig: email and name 1`] = `
"# Managed by inscope. Do not edit by hand.
[user]
	email = e@x.dev
	name = E
"
`;

exports[`golden: per-workspace gitconfig: email only 1`] = `
"# Managed by inscope. Do not edit by hand.
[user]
	email = e@x.dev
"
`;

exports[`golden: per-workspace gitconfig: name only 1`] = `
"# Managed by inscope. Do not edit by hand.
[user]
	name = E
"
`;

exports[`golden: per-workspace gitconfig: neither 1`] = `
"# Managed by inscope. Do not edit by hand.
[user]
"
`;

exports[`golden: .zshrc source line, fresh file and appended: fresh 1`] = `
"# inscope: load each workspace's tokens (GitHub, Slack) from $PWD on every cd
[ -r "$HOME/.config/inscope/inscope.zsh" ] && source "$HOME/.config/inscope/inscope.zsh"
"
`;

exports[`golden: .zshrc source line, fresh file and appended: appended 1`] = `
"export FOO=1

# inscope: load each workspace's tokens (GitHub, Slack) from $PWD on every cd
[ -r "$HOME/.config/inscope/inscope.zsh" ] && source "$HOME/.config/inscope/inscope.zsh"
"
`;

exports[`golden: SERVER_TYPES registry order is locked 1`] = `
[
  "github",
  "atlassian",
  "canva",
  "clickup",
  "hubspot",
  "intercom",
  "linear",
  "monday",
  "notion",
  "plane",
  "sentry",
  "slack",
  "stripe",
  "vercel",
  "webflow",
]
`;

exports[`golden: slack keychain naming for tricky labels 1`] = `
{
  "Weird Name!": "SLACK_MCP_XOXP_TOKEN_WEIRD_NAME_",
  "a.b c": "SLACK_MCP_XOXP_TOKEN_A_B_C",
  "acme": "SLACK_MCP_XOXP_TOKEN_ACME",
  "brand-new": "SLACK_MCP_XOXP_TOKEN_BRAND_NEW",
}
`;
